fixing problem with add contact button mobile

--- a/styles/contacts_resp.css
+++ b/styles/contacts_resp.css
@@ -314,3 +314,7 @@
 .backFromDetail {
   cursor: pointer;
 }
+
+.addButtonRemoved {
+  display: none;
+}
